hardware accelerated for ui

--- a/AwesomeScreencast/res/values/strings.xml
+++ b/AwesomeScreencast/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="app_name">AwesomeScreencast</string>
     <string name="go">Go screen!</string>
-    <string name="go_server">Go screen http feed !</string>
+    <string name="go_png">PNG Frames (Nexus 7)</string>
+    <string name="go_server">Go screen http feed ! - not png mode</string>
     <string name="server_live">accessible on http://your-ip:port/live.flv</string>
     <string name="menu_settings">Settings</string>
 
@@ -18,4 +19,7 @@
     <string name="behind_server_listening_port">Port (default: 8090)</string>
     <string name="behind_server_maxconnections">MaxConnections (default: 5)</string>
     <string name="behind_server_save">Save</string>
+    
+    <string name="service_recording">Recording frames ...</string>
+	<string name="service_waiting">Waiting for FFMPEG...</string>
 </resources>
